# mockserve

./: .gitignore  .pre-commit-config.yaml  README.md  mock_config.yaml  pyproject.toml  runner.py
src/mockserve/: config.py  generator.py  parser.py  server.py
