[project]
name = "mockserve"
version = "0.1.0"
description = "Simple API Mocking Tool"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.4.0",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
